--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "mongochat",
   "version": "1.0.0",
   "description": "MongoChat",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "dev":"DEBUG=app,app:* nodemon server.js",
+    "start":"node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/ajspeller/mongochat/issues"
   },
-  "homepage": "https://github.com/ajspeller/mongochat#readme"
+  "homepage": "https://github.com/ajspeller/mongochat#readme",
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "debug": "^4.1.1",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "helmet": "^3.18.0",
+    "mongodb": "^3.2.7",
+    "morgan": "^1.9.1",
+    "socket.io": "^2.2.0"
+  }
 }
